samples/_failures_safe/1761249664_16e5cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5b9d247.c: In function ‘main’:
./samples/SAFE/__tmp_d5b9d247.c:152:15: error: expected ‘;’ at end of input
  152 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_d5b9d247.c:152:9: error: expected declaration or statement at end of input
  152 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_d5b9d247.c:152:9: error: expected declaration or statement at end of input
